--- a/appfolder/app/src/main/res/values/strings.xml
+++ b/appfolder/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">app-folder</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="current_beacon_open">Open</string>
 </resources>
